# simplepagegenerator

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  nginx.conf
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b5de78d8a48_initial_schema.py  a1b2c3d4e5f6_add_project_memories.py  b2c3d4e5f6g7_add_exploration_tables.py  c3d4e5f6g7h8_add_kv_cache_table.py
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: engine.py  session.py
backend/app/models/: __init__.py  chat_message.py  chat_thread.py  exploration.py  project.py  project_file.py  project_memory.py  project_version.py
backend/app/pipeline/: builder.py  fix_agent.py  intent_parser.py  orchestrator.py  planner.py  tools.py
backend/app/pipeline/prompts/: builder.py  fix_agent.py  game_feel.py  intent_parser.py  planner.py
backend/app/routers/: build.py  chat.py  exploration.py  files.py  memories.py  preview.py  projects.py  publish.py  versions.py
backend/app/schemas/: chat.py  exploration.py  memory.py  pipeline.py  project.py  project_file.py  project_version.py
backend/app/services/: build_service.py  chat_service.py  exploration_service.py  feel_defaults.py  file_service.py  memory_service.py  project_service.py  publish_service.py  version_service.py
backend/app/templates/: init_project.py  phaser_demos.py
backend/app/utils/: sandbox.py  sse.py
docs/: exploration-system.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: dev.sh  setup.sh
(+48 files in other folders)
